--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,4 @@ ver3/result/nobeam/namaster_comparison2.txt
 assets/__pycache__/__init__.cpython-311.pyc
 assets/__pycache__/deprojection_index.cpython-311.pyc
 assets/__pycache__/make_galaxy_map.cpython-311.pyc
+assets/__pycache__/make_galaxy_map.cpython-311.pyc
