After discussion revisions

--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,5 @@ assets/__pycache__/__init__.cpython-311.pyc
 assets/__pycache__/deprojection_index.cpython-311.pyc
 assets/__pycache__/make_galaxy_map.cpython-311.pyc
 assets/__pycache__/make_galaxy_map.cpython-311.pyc
+__pycache__/unWISE_bincount_maps.cpython-311.pyc
+sweep-000m005-005p000-pz.fits
