--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,6 @@ __pycache__/unWISE_bincount_maps.cpython-311.pyc
 sweep-000m005-005p000-pz.fits
 Planck_temperature/namaster_cltt.txt
 assets/__pycache__/make_galaxy_map.cpython-311.pyc
+__pycache__/kebab.cpython-311.pyc
+assets/__pycache__/make_galaxy_map.cpython-311.pyc
+assets/__pycache__/make_galaxy_map.cpython-311.pyc
