--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,6 @@ assets/__pycache__/make_galaxy_map.cpython-311.pyc
 __pycache__/kebab.cpython-311.pyc
 assets/__pycache__/make_galaxy_map.cpython-311.pyc
 assets/__pycache__/make_galaxy_map.cpython-311.pyc
+assets/__pycache__/make_galaxy_map.cpython-311.pyc
+unwiseact_results/cibdBeta_results_nobeam.txt
+unwiseact_results/cibdbeta_results.txt
