changed map reprojection from healpix_from_enmap to map2healpix

--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,6 @@ assets/__pycache__/make_galaxy_map.cpython-311.pyc
 assets/__pycache__/make_galaxy_map.cpython-311.pyc
 unwiseact_results/cibdBeta_results_nobeam.txt
 unwiseact_results/cibdbeta_results.txt
+assets/__pycache__/make_galaxy_map.cpython-311.pyc
+unwiseact_results/cibdBeta_results_12_18.txt
+__pycache__/unwiseact.cpython-311.pyc
