created act_car.py as a handler for car deprojection maps.

--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,40 @@ unwiseact_results/cibdbeta_results.txt
 assets/__pycache__/make_galaxy_map.cpython-311.pyc
 unwiseact_results/cibdBeta_results_12_18.txt
 __pycache__/unwiseact.cpython-311.pyc
+act_DR4_DR5/act_dr4.01_D56_apo_w0.fits
+act_DR4_DR5/act_dr4.01_mask_s13s16_0.015mJy_5.0arcmin.fits
+act_DR4_DR5/act_dr4.01_s15_D56_pa1_f150_nohwp_night_3pass_4way_coadd_ivar.fits
+act_DR4_DR5/act_dr4.01_s15_D56_pa1_f150_nohwp_night_3pass_4way_coadd_map_srcfree.fits
+act_DR4_DR5/act_dr4.01_s15_D56_pa1_f150_nohwp_night_3pass_4way_coadd_srcs.fits
+act_DR4_DR5/act_dr4.01_s15_D56_pa1_f150_nohwp_night_3pass_4way_set0_ivar.fits
+act_DR4_DR5/act_dr4.01_s15_D56_pa1_f150_nohwp_night_3pass_4way_set0_map_srcfree.fits
+act_DR4_DR5/act_dr4.01_s15_D56_pa1_f150_nohwp_night_3pass_4way_set0_srcs.fits
+act_DR4_DR5/act_dr4.01_s15_D56_pa1_f150_nohwp_night_3pass_4way_set1_ivar.fits
+act_DR4_DR5/act_dr4.01_s15_D56_pa1_f150_nohwp_night_3pass_4way_set1_map_srcfree.fits
+act_DR4_DR5/act_dr4.01_s15_D56_pa1_f150_nohwp_night_3pass_4way_set1_srcs.fits
+act_DR4_DR5/act_dr4.01_s15_D56_pa1_f150_nohwp_night_3pass_4way_set2_ivar.fits
+act_DR4_DR5/act_dr4.01_s15_D56_pa1_f150_nohwp_night_3pass_4way_set2_map_srcfree.fits
+act_DR4_DR5/act_dr4.01_s15_D56_pa1_f150_nohwp_night_3pass_4way_set2_srcs.fits
+act_DR4_DR5/act_dr4.01_s15_D56_pa1_f150_nohwp_night_3pass_4way_set3_ivar.fits
+act_DR4_DR5/act_dr4.01_s15_D56_pa1_f150_nohwp_night_3pass_4way_set3_map_srcfree.fits
+act_DR4_DR5/act_dr4.01_s15_D56_pa1_f150_nohwp_night_3pass_4way_set3_srcs.fits
+act_DR4_DR5/act_dr4.01_s15_pa1_f150_nohwp_night_beam_tform_jitter_D56_cmbspec.txt
+act_DR4_DR5/act_notebooks.yml
+act_DR4_DR5/auto_cov_TTTT.txt
+act_DR4_DR5/BIN_ACTPOL_50_4_SC_low_ell
+act_DR4_DR5/camb_theory.dat
+act_DR4_DR5/cross_cov_TTTT.txt
+act_DR4_DR5/deep56_kfilter_tfunc_sim.txt
+act_DR4_DR5/deep56_TT_spectrum.txt
+act_DR4_DR5/pull_data_notebook_8_curl.sh
+act_DR4_DR5/TT_cross_spectra.txt
+act_DR4_DR5/mcm/mcm.json
+act_DR4_DR5/mcm/w00.bin
+assets/__pycache__/make_galaxy_map.cpython-311.pyc
+unwiseact_results/cibdBeta_results_first_sample.txt
+figures/mask/ilc_actplanck_ymap_deproj_cib_cibdBeta_1.0_10.7.fits.png
+figures/mask/ilc_actplanck_ymap_deproj_cib_cibdBeta_1.2_10.7.fits.png
+figures/mask/mask_composite.png
+figures/mask/mask_subtracted_sources.fits.png
+figures/mask/wide_mask_GAL070_apod_1.50_deg_wExtended_hd.fits.png
+wide_mask_GAL070_apod_1.50_deg_wExtended_hd.fits.png
