Added_midz_lowz_sample

--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,44 @@ assets/__pycache__/act_car.cpython-311.pyc
 ilc_actplanck_ymap_deproj_cib_cibdBeta_1.2_10.7.fits.png
 assets/__pycache__/galaxy_map_read.cpython-311.pyc
 assets/__pycache__/make_galaxy_map.cpython-311.pyc
+unwiseact_results/healpix_lowz_dev/cibdBeta_results_first_sample.txt
+unwiseact_results/healpix_midz/midz_cibdBeta_1.0_T_10.7_results.txt
+unwiseact_results/healpix_midz/midz_cibdBeta_1.0_T_24.0_results.txt
+unwiseact_results/healpix_midz/midz_cibdBeta_1.2_T_10.7_results.txt
+unwiseact_results/healpix_midz/midz_cibdBeta_1.2_T_24.0_results.txt
+unwiseact_results/healpix_midz/midz_cibdBeta_1.3_T_24.0_results.txt
+unwiseact_results/healpix_midz/midz_cibdBeta_1.4_T_10.7_results.txt
+unwiseact_results/healpix_midz/midz_cibdBeta_1.4_T_24.0_results.txt
+unwiseact_results/healpix_midz/midz_cibdBeta_1.6_T_10.7_results.txt
+unwiseact_results/healpix_midz/midz_cibdBeta_1.6_T_24.0_results.txt
+unwiseact_results/healpix_midz/midz_cibdBeta_1.7_T_10.7_results.txt
+unwiseact_results/healpix_midz/midz_cibdBeta_1.7_T_24.0_results.txt
+unwiseact_results/healpix_midz/midz_cibdBeta_1.8_T_10.7_results.txt
+unwiseact_results/healpix_midz/midz_cibdBeta_1.8_T_24.0_results.txt
+unwiseact_results/healpix_midz/midz_cibdBeta_1.15_T_24.0_results.txt
+unwiseact_results/healpix_midz/midz_cibdBeta_1.35_T_24.0_results.txt
+unwiseact_results/healpix_midz/midz_cibdBeta_1.45_T_24.0_results.txt
+unwiseact_results/healpix_midz/midz_cibdBeta_2.0_T_10.7_results.txt
+unwiseact_results/healpix_midz/midz_cibdBeta_2.0_T_24.0_results.txt
+unwiseact_results/healpix_midz_dev/cibdBeta_results_first_sample.txt
+unwiseact_results/healpix_midz_dev/midz_cibdBeta_1.0_T_10.7_results.txt
+unwiseact_results/healpix_midz_dev/midz_cibdBeta_1.0_T_24.0_results.txt
+unwiseact_results/healpix_midz_dev/midz_cibdBeta_1.2_T_10.7_results.txt
+unwiseact_results/healpix_midz_dev/midz_cibdBeta_1.2_T_24.0_results.txt
+unwiseact_results/healpix_midz_dev/midz_cibdBeta_1.3_T_24.0_results.txt
+unwiseact_results/healpix_midz_dev/midz_cibdBeta_1.4_T_10.7_results.txt
+unwiseact_results/healpix_midz_dev/midz_cibdBeta_1.4_T_24.0_results.txt
+unwiseact_results/healpix_midz_dev/midz_cibdBeta_1.6_T_10.7_results.txt
+unwiseact_results/healpix_midz_dev/midz_cibdBeta_1.6_T_24.0_results.txt
+unwiseact_results/healpix_midz_dev/midz_cibdBeta_1.7_T_10.7_results.txt
+unwiseact_results/healpix_midz_dev/midz_cibdBeta_1.7_T_24.0_results.txt
+unwiseact_results/healpix_midz_dev/midz_cibdBeta_1.8_T_10.7_results.txt
+unwiseact_results/healpix_midz_dev/midz_cibdBeta_1.8_T_24.0_results.txt
+unwiseact_results/healpix_midz_dev/midz_cibdBeta_1.15_T_24.0_results.txt
+unwiseact_results/healpix_midz_dev/midz_cibdBeta_1.35_T_24.0_results.txt
+unwiseact_results/healpix_midz_dev/midz_cibdBeta_1.45_T_24.0_results.txt
+unwiseact_results/healpix_midz_dev/midz_cibdBeta_2.0_T_10.7_results.txt
+unwiseact_results/healpix_midz_dev/midz_cibdBeta_2.0_T_24.0_results.txt
+unwiseact_results/lowz_gg/lowz_auto_results.txt
+unwiseact_results/midz_gg/midz_auto_results.txt
+__pycache__/unwiseact_healpix.cpython-311.pyc
